--- a/Main.tex
+++ b/Main.tex
@@ -99,6 +99,8 @@
 \usetikzlibrary{shapes.symbols}
 \usepgflibrary{shapes.callouts}
 \usetikzlibrary{shapes.callouts}
+\usepgflibrary{arrows}
+\usetikzlibrary{through} 
 %%\usetikzlibrary{arrows,backgrounds,snakes,shapes}
 
 \renewcommand{\lstlistingname}{Code Listing}
